--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
 
         <div class="form-group">
-            <label>ناڤنیشان / Address:</label>
+            <label>ناڤونیشان / Address:</label>
             <input type="text" id="address" placeholder="Neighborhood / گەڕەک یان Street" required>
         </div>
 
@@ -151,7 +151,7 @@
             <input type="text" id="item" placeholder="Ex: Clothes, Shoes... / جلک، پێلاڤ..." required>
         </div>
 
-        <button type="button" onclick="sendToWhatsApp()">بڕێکا وەتسئاپێ بفرێژە / Send via WhatsApp</button>
+        <button type="button" onclick="sendToWhatsApp()">داخوازى ب ڕێکا وەتسئاپێ بهنيرە / Send via WhatsApp</button>
     </form>
 </div>
 
@@ -176,3 +176,4 @@
 
 </body>
 </html>
+
